[metadata]
name = gias3
version = 3.0.1
description = Geometry Image-Analysis Statistics version 3 (GIAS3)
long_description = file: README.rst
keywords = musculoskeletal, modelling
license = Mozilla Public License 2.0 (MPL 2.0)
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
install_requires =
    gias3.fieldwork
    gias3.registration
    gias3.image_analysis
    gias3.learning
    gias3.mesh

[options.extras_require]
apps = gias3.applications
examples = gias3.examples
tests = gias3.testing
vis = gias3.visualisation
io = gias3.io
mapclient = gias3.mapclientpluginutilities
musculoskeletal = gias3.musculoskeletal
